--- a/package.json
+++ b/package.json
@@ -1,48 +1,35 @@
-{
-    "name": "frontend",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.9.6",
-        "@babel/plugin-transform-runtime": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.4",
-        "axios": "^0.19.2",
-        "axios-mock-adapter": "^1.18.1",
-        "babel-loader": "^8.1.0",
-        "cli": "^1.0.1",
-        "css-loader": "^3.5.3",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1",
-        "style-loader": "^1.2.1",
-        "webpack": "^4.42.0",
-        "webpack-cli": "^3.3.11"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --watchAll=false",
-        "eject": "react-scripts eject",
-        "dev": "webpack-dev-server --mode development",
-        "build": "webpack --mode production"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@testing-library/jest-dom": "^5.3.0",
-        "@testing-library/react": "^10.0.2",
-        "@testing-library/user-event": "^7.1.2"
-    }
-}
+  {
+      "name": "frontend",
+      "version": "0.1.0",
+      "private": true,
+      "dependencies": {
+          "axios": "^0.19.2",
+          "axios-mock-adapter": "^1.18.1",
+          "react": "^16.13.1",
+          "react-dom": "^16.13.1",
+          "react-scripts": "3.4.1"
+      },
+      "scripts": {
+          "start": "react-scripts start",
+          "build": "react-scripts build",
+          "test": "react-scripts test --watchAll=false",
+          "eject": "react-scripts eject"
+      },
+      "browserslist": {
+          "production": [
+              ">0.2%",
+              "not dead",
+              "not op_mini all"
+          ],
+          "development": [
+              "last 1 chrome version",
+              "last 1 firefox version",
+              "last 1 safari version"
+          ]
+      },
+      "devDependencies": {
+          "@testing-library/jest-dom": "^5.3.0",
+          "@testing-library/react": "^10.0.2",
+          "@testing-library/user-event": "^7.1.2"
+      }
+  }
